Migrate file model to Path and introduce VFS
Replace java.io.File usage with java.nio.file.Path across events, UI and services; add a VFS abstraction and ZIP/local mount providers.

Key changes:
- Events updated to carry Path (FileSelectedEvent, ListViewFileOpen, QuickViewEvent, ShowEditorScreenEvent).
- FilePanel fully rewritten to use Path/NIO; directory listing runs on a virtual thread, model updates are posted to the EDT, per-root last-path history restored on drive switches, search/keyboard behaviors preserved. Supports mounting ZIP archives via ZipMountProvider and selecting entries via EntryInfo.
- FileTableModel refactored to work with EntryInfo instead of File and provide proper column formatting for Path-backed entries.
- MainWindow wired to MountRegistry and ZipMountProvider, updated keyboard handlers to work with Path, and adapted quick view/editor usage to Path.
- OpenFileWithDefaultProgram updated to accept Path, checks for local filesystem before opening with OS default, and removes unused init code.
- ChangeDrivePopup now retrieves roots from MountRegistry and works with Path.
- New VFS interfaces and types added: Capabilities, EntryInfo, LocalMountProvider, MountProvider, MountRegistry, MountedFs, Operation, ZipMountProvider.

Why: migrate to NIO Path for better filesystem abstraction and to support mounting/ browsing non-standard filesystems (ZIP archives, potential remote mounts) while keeping UI responsive by moving IO off the EDT.