@@ -1,15 +1,13 @@
 package dev.nuclr.commander.ui.editor;
 
 import java.awt.BorderLayout;
-import java.io.File;
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 
 import javax.swing.JPanel;
 
-import org.fife.ui.rsyntaxtextarea.RSyntaxTextArea;
-
-import dev.nuclr.commander.common.FileUtils;
 import lombok.Data;
 import lombok.extern.slf4j.Slf4j;
 
@@ -21,28 +19,28 @@ public class EditorScreen {
 
 	private Editor textArea;
 
-	private File file;
+	private Path path;
 
-	public EditorScreen(File file) {
-
-		this.file = file;
+	public EditorScreen(Path path) {
+		this.path = path;
 
 		this.panel = new JPanel(new BorderLayout());
-
 		this.textArea = new Editor();
 
+		String filename = path.getFileName() != null
+				? path.getFileName().toString()
+				: path.toString();
+
 		try {
-			var content = FileUtils.readFileToString(file, StandardCharsets.UTF_8);
-			this.textArea.setText(file, content);
-		} catch (Exception e) {
-			log.error("Failed to read file: {}", file.getAbsolutePath(), e);
-			this.textArea.setText(file, "Error reading file: " + e.getMessage());
+			var content = Files.readString(path, StandardCharsets.UTF_8);
+			this.textArea.setText(filename, content);
+		} catch (IOException e) {
+			log.error("Failed to read file: {}", path, e);
+			this.textArea.setText(filename, "Error reading file: " + e.getMessage());
 			this.textArea.setEditable(false);
 		}
 
-		var scrollPane = textArea.getPanel();
-
-		this.panel.add(scrollPane, BorderLayout.CENTER);
+		this.panel.add(textArea.getPanel(), BorderLayout.CENTER);
 	}
 
 	public void dispose() {
@@ -52,5 +50,4 @@ public class EditorScreen {
 	public void focus() {
 		this.textArea.focus();
 	}
-
 }
